# todo-app-hackathon

./: .gitignore  CDK.txt  CLAUDE.md  DEPLOYMENT.md  README.md  SECURITY.md  analyze-pages.js  debug_scope.py  debug_specific.py  debug_time.py  final_test.py  generate-secret.js  package-lock.json  package.json  pyproject.toml  test-app.js  test-auth-flow.js  test-dashboard.js  test-existing-user.js  test-full-flow.js  test-signup-debug.js  test-signup-features.js  test_app.py  test_integration.py  test_scope_validation.py
backend/: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  README.md  alembic.ini  create_auth_tables.py  migrate_tasks.py  package.json  pyproject.toml  requirements.txt  test_mcp_tool.py
backend/alembic/: env.py
backend/alembic/versions/: 2310991d3299_add_chat_tables_for_phase_iii.py  b2392c4bb046_add_priorities_tags_due_dates_.py
backend/api/: _index.py  index.py
backend/src/: config.py  main.py
backend/src/agents/: __init__.py  agent_runner.py  bulk_delete_tool.py  system_date_tool.py  todo_agent.py  tools.py
backend/src/api/: admin.py  chat.py  health.py  notifications.py  tasks.py
backend/src/auth/: dependencies.py  jwks.py
backend/src/db/: engine.py  migrate.py  session.py  session_sync.py
backend/src/mcp/: __init__.py  auth.py  auth_contextvar_old.py  auth_fixed.py  auth_task_based_broken.py  server.py  tool_logger.py  tools.py  tools_http_old.py  tools_old_broken.py
backend/src/middleware/: rate_limit.py
backend/src/models/: __init__.py  chat_conversation.py  chat_message.py  (+1 more)
backend/tests/: conftest.py
(+196 files in other folders)
